de-f-ing the css
it's an upstream issue, but this should resolve it enough to get it working.

--- a/src/css/minecraft.css
+++ b/src/css/minecraft.css
@@ -280,7 +280,7 @@
   
   /* coordinates of the image */
   --i:-104; 
-  --j:--1; 
+  --j:-1; 
 }
 .adult-carrots {
   --n:1; /* scale */
@@ -308,7 +308,7 @@
   
   /* coordinates of the image */
   --i:-67; 
-  --j:--1; 
+  --j:-1; 
 }
 .air {
   --n:1; /* scale */
@@ -413,7 +413,7 @@
   
   /* coordinates of the image */
   --i:-26; 
-  --j:--1; 
+  --j:-1; 
 }
 .amethyst-trim-chainmail-leggings {
   --n:1; /* scale */
@@ -742,7 +742,7 @@
   
   /* coordinates of the image */
   --i:-44; 
-  --j:--1; 
+  --j:-1; 
 }
 .arrow-of-decay-revision-1 {
   --n:1; /* scale */
@@ -1001,7 +1001,7 @@
   
   /* coordinates of the image */
   --i:-21; 
-  --j:--1; 
+  --j:-1; 
 }
 .bamboo-hanging-sign {
   --n:1; /* scale */
@@ -1127,7 +1127,7 @@
   
   /* coordinates of the image */
   --i:-21; 
-  --j:--1; 
+  --j:-1; 
 }
 .bamboo-wood-planks {
   --n:1; /* scale */
@@ -1267,7 +1267,7 @@
   
   /* coordinates of the image */
   --i:-2; 
-  --j:--1; 
+  --j:-1; 
 }
 .bee-spawn-egg {
   --n:1; /* scale */
@@ -1491,7 +1491,7 @@
   
   /* coordinates of the image */
   --i:-101; 
-  --j:--1; 
+  --j:-1; 
 }
 .birch-stairs-left {
   --n:1; /* scale */
@@ -1575,7 +1575,7 @@
   
   /* coordinates of the image */
   --i:-101; 
-  --j:--1; 
+  --j:-1; 
 }
 .birch-wood-trapdoor {
   --n:1; /* scale */
@@ -1610,7 +1610,7 @@
   
   /* coordinates of the image */
   --i:-22; 
-  --j:--1; 
+  --j:-1; 
 }
 .black-banner-15w14a {
   --n:1; /* scale */
@@ -1939,7 +1939,7 @@
   
   /* coordinates of the image */
   --i:-80; 
-  --j:--1; 
+  --j:-1; 
 }
 .black-per-fess-inverted-banner {
   --n:1; /* scale */
@@ -2639,7 +2639,7 @@
   
   /* coordinates of the image */
   --i:-81; 
-  --j:--1; 
+  --j:-1; 
 }
 .blue-paly-banner {
   --n:1; /* scale */
@@ -2968,7 +2968,7 @@
   
   /* coordinates of the image */
   --i:-40; 
-  --j:--1; 
+  --j:-1; 
 }
 .bow-be {
   --n:1; /* scale */
@@ -3129,7 +3129,7 @@
   
   /* coordinates of the image */
   --i:-14; 
-  --j:--1; 
+  --j:-1; 
 }
 .broken-elytra {
   --n:1; /* scale */
@@ -3381,7 +3381,7 @@
   
   /* coordinates of the image */
   --i:-82; 
-  --j:--1; 
+  --j:-1; 
 }
 .brown-glazed-terracotta {
   --n:1; /* scale */
@@ -3871,7 +3871,7 @@
   
   /* coordinates of the image */
   --i:-56; 
-  --j:--1; 
+  --j:-1; 
 }
 .cake {
   --n:1; /* scale */
@@ -4081,7 +4081,7 @@
   
   /* coordinates of the image */
   --i:-56; 
-  --j:--1; 
+  --j:-1; 
 }
 .chain {
   --n:1; /* scale */
@@ -4249,7 +4249,7 @@
   
   /* coordinates of the image */
   --i:-37; 
-  --j:--1; 
+  --j:-1; 
 }
 .cherry-trapdoor {
   --n:1; /* scale */
@@ -4326,7 +4326,7 @@
   
   /* coordinates of the image */
   --i:-37; 
-  --j:--1; 
+  --j:-1; 
 }
 .cherry-wood-trapdoor {
   --n:1; /* scale */
@@ -4683,7 +4683,7 @@
   
   /* coordinates of the image */
   --i:-105; 
-  --j:--1; 
+  --j:-1; 
 }
 .cocoa-beans {
   --n:1; /* scale */
@@ -4725,7 +4725,7 @@
   
   /* coordinates of the image */
   --i:-16; 
-  --j:--1; 
+  --j:-1; 
 }
 .composter {
   --n:1; /* scale */
@@ -4774,7 +4774,7 @@
   
   /* coordinates of the image */
   --i:-100; 
-  --j:--1; 
+  --j:-1; 
 }
 .cooked-cod {
   --n:1; /* scale */
@@ -4900,7 +4900,7 @@
   
   /* coordinates of the image */
   --i:-39; 
-  --j:--1; 
+  --j:-1; 
 }
 .copper-trim-chainmail-boots {
   --n:1; /* scale */
@@ -4921,7 +4921,7 @@
   
   /* coordinates of the image */
   --i:-27; 
-  --j:--1; 
+  --j:-1; 
 }
 .copper-trim-chainmail-leggings {
   --n:1; /* scale */
@@ -5551,7 +5551,7 @@
   
   /* coordinates of the image */
   --i:-83; 
-  --j:--1; 
+  --j:-1; 
 }
 .cyan-chief-indented-banner {
   --n:1; /* scale */
@@ -6202,7 +6202,7 @@
   
   /* coordinates of the image */
   --i:-78; 
-  --j:--1; 
+  --j:-1; 
 }
 .damaged-leather-pants {
   --n:1; /* scale */
@@ -6307,7 +6307,7 @@
   
   /* coordinates of the image */
   --i:-111; 
-  --j:--1; 
+  --j:-1; 
 }
 .damaged-stone-pickaxe {
   --n:1; /* scale */
@@ -6699,7 +6699,7 @@
   
   /* coordinates of the image */
   --i:-74; 
-  --j:--1; 
+  --j:-1; 
 }
 .dead-brain-coral-block {
   --n:1; /* scale */
@@ -7098,7 +7098,7 @@
   
   /* coordinates of the image */
   --i:-106; 
-  --j:--1; 
+  --j:-1; 
 }
 .diamond-pickaxe {
   --n:1; /* scale */
@@ -7280,7 +7280,7 @@
   
   /* coordinates of the image */
   --i:-29; 
-  --j:--1; 
+  --j:-1; 
 }
 .diamond-trim-netherite-leggings {
   --n:1; /* scale */
@@ -7385,7 +7385,7 @@
   
   /* coordinates of the image */
   --i:-36; 
-  --j:--1; 
+  --j:-1; 
 }
 .double-smooth-stone-slab {
   --n:1; /* scale */
@@ -7714,7 +7714,7 @@
   
   /* coordinates of the image */
   --i:-30; 
-  --j:--1; 
+  --j:-1; 
 }
 .emerald-trim-netherite-boots {
   --n:1; /* scale */
@@ -7826,7 +7826,7 @@
   
   /* coordinates of the image */
   --i:-11; 
-  --j:--1; 
+  --j:-1; 
 }
 .end-portal {
   --n:1; /* scale */
@@ -8043,14 +8043,14 @@
   
   /* coordinates of the image */
   --i:-25; 
-  --j:--1; 
+  --j:-1; 
 }
 .eye-armor-trim-smithing-template {
   --n:1; /* scale */
   
   /* coordinates of the image */
   --i:-25; 
-  --j:--1; 
+  --j:-1; 
 }
 .eye-drops {
   --n:1; /* scale */
@@ -8071,7 +8071,7 @@
   
   /* coordinates of the image */
   --i:-12; 
-  --j:--1; 
+  --j:-1; 
 }
 .farmland {
   --n:1; /* scale */
@@ -8344,7 +8344,7 @@
   
   /* coordinates of the image */
   --i:-77; 
-  --j:--1; 
+  --j:-1; 
 }
 .francium {
   --n:1; /* scale */
@@ -8708,7 +8708,7 @@
   
   /* coordinates of the image */
   --i:-31; 
-  --j:--1; 
+  --j:-1; 
 }
 .gold-trim-iron-helmet {
   --n:1; /* scale */
@@ -9037,7 +9037,7 @@
   
   /* coordinates of the image */
   --i:-84; 
-  --j:--1; 
+  --j:-1; 
 }
 .gray-bordure-banner {
   --n:1; /* scale */
@@ -9450,7 +9450,7 @@
   
   /* coordinates of the image */
   --i:-85; 
-  --j:--1; 
+  --j:-1; 
 }
 .green-base-dexter-canton-banner {
   --n:1; /* scale */
@@ -9709,7 +9709,7 @@
   
   /* coordinates of the image */
   --i:-60; 
-  --j:--1; 
+  --j:-1; 
 }
 .green-lozenge-banner {
   --n:1; /* scale */
@@ -9793,7 +9793,7 @@
   
   /* coordinates of the image */
   --i:-86; 
-  --j:--1; 
+  --j:-1; 
 }
 .green-per-pale-inverted-banner {
   --n:1; /* scale */
@@ -9898,7 +9898,7 @@
   
   /* coordinates of the image */
   --i:-23; 
-  --j:--1; 
+  --j:-1; 
 }
 .green-thing-banner {
   --n:1; /* scale */
@@ -10038,14 +10038,14 @@
   
   /* coordinates of the image */
   --i:-61; 
-  --j:--1; 
+  --j:-1; 
 }
 .hardened-brown-stained-glass-pane {
   --n:1; /* scale */
   
   /* coordinates of the image */
   --i:-62; 
-  --j:--1; 
+  --j:-1; 
 }
 .hardened-cyan-stained-glass {
   --n:1; /* scale */
@@ -10255,7 +10255,7 @@
   
   /* coordinates of the image */
   --i:-102; 
-  --j:--1; 
+  --j:-1; 
 }
 .head {
   --n:1; /* scale */
@@ -10493,7 +10493,7 @@
   
   /* coordinates of the image */
   --i:-36; 
-  --j:--1; 
+  --j:-1; 
 }
 .host-armor-trim {
   --n:1; /* scale */
@@ -10654,7 +10654,7 @@
   
   /* coordinates of the image */
   --i:-50; 
-  --j:--1; 
+  --j:-1; 
 }
 .initialized-nether-reactor-core-revision-1 {
   --n:1; /* scale */
@@ -10969,7 +10969,7 @@
   
   /* coordinates of the image */
   --i:-32; 
-  --j:--1; 
+  --j:-1; 
 }
 .iron-trim-iron-leggings {
   --n:1; /* scale */
@@ -11242,14 +11242,14 @@
   
   /* coordinates of the image */
   --i:-70; 
-  --j:--1; 
+  --j:-1; 
 }
 .jungle-planks {
   --n:1; /* scale */
   
   /* coordinates of the image */
   --i:-28; 
-  --j:--1; 
+  --j:-1; 
 }
 .jungle-pressure-plate {
   --n:1; /* scale */
@@ -11340,7 +11340,7 @@
   
   /* coordinates of the image */
   --i:-28; 
-  --j:--1; 
+  --j:-1; 
 }
 .jungle-wood-pressure-plate {
   --n:1; /* scale */
@@ -11452,7 +11452,7 @@
   
   /* coordinates of the image */
   --i:-57; 
-  --j:--1; 
+  --j:-1; 
 }
 .lapis-lazuli {
   --n:1; /* scale */
@@ -11620,7 +11620,7 @@
   
   /* coordinates of the image */
   --i:-33; 
-  --j:--1; 
+  --j:-1; 
 }
 .lapis-trim-netherite-boots {
   --n:1; /* scale */
@@ -11669,7 +11669,7 @@
   
   /* coordinates of the image */
   --i:-107; 
-  --j:--1; 
+  --j:-1; 
 }
 .latex {
   --n:1; /* scale */
@@ -11809,7 +11809,7 @@
   
   /* coordinates of the image */
   --i:-65; 
-  --j:--1; 
+  --j:-1; 
 }
 .leather-pants-revision-2 {
   --n:1; /* scale */
@@ -12397,7 +12397,7 @@
   
   /* coordinates of the image */
   --i:-87; 
-  --j:--1; 
+  --j:-1; 
 }
 .light-blue-per-bend-inverted-banner {
   --n:1; /* scale */
@@ -12845,7 +12845,7 @@
   
   /* coordinates of the image */
   --i:-88; 
-  --j:--1; 
+  --j:-1; 
 }
 .light-gray-jar {
   --n:1; /* scale */
@@ -13139,7 +13139,7 @@
   
   /* coordinates of the image */
   --i:-15; 
-  --j:--1; 
+  --j:-1; 
 }
 .lime-base-banner {
   --n:1; /* scale */
@@ -13230,7 +13230,7 @@
   
   /* coordinates of the image */
   --i:-13; 
-  --j:--1; 
+  --j:-1; 
 }
 .lime-carpet {
   --n:1; /* scale */
@@ -13300,7 +13300,7 @@
   
   /* coordinates of the image */
   --i:-89; 
-  --j:--1; 
+  --j:-1; 
 }
 .lime-cross-banner {
   --n:1; /* scale */
@@ -13545,7 +13545,7 @@
   
   /* coordinates of the image */
   --i:-63; 
-  --j:--1; 
+  --j:-1; 
 }
 .lime-terracotta {
   --n:1; /* scale */
@@ -13685,7 +13685,7 @@
   
   /* coordinates of the image */
   --i:-109; 
-  --j:--1; 
+  --j:-1; 
 }
 .lingering-potion-of-leaping-revision-1 {
   --n:1; /* scale */
@@ -13727,7 +13727,7 @@
   
   /* coordinates of the image */
   --i:-10; 
-  --j:--1; 
+  --j:-1; 
 }
 .lingering-potion-of-poison {
   --n:1; /* scale */
@@ -14168,7 +14168,7 @@
   
   /* coordinates of the image */
   --i:-90; 
-  --j:--1; 
+  --j:-1; 
 }
 .magenta-candle {
   --n:1; /* scale */
@@ -14308,7 +14308,7 @@
   
   /* coordinates of the image */
   --i:-47; 
-  --j:--1; 
+  --j:-1; 
 }
 .magenta-globe-banner {
   --n:1; /* scale */
@@ -14707,7 +14707,7 @@
   
   /* coordinates of the image */
   --i:-19; 
-  --j:--1; 
+  --j:-1; 
 }
 .mangrove-sign {
   --n:1; /* scale */
@@ -14924,7 +14924,7 @@
   
   /* coordinates of the image */
   --i:-45; 
-  --j:--1; 
+  --j:-1; 
 }
 .mhf-arrowright {
   --n:1; /* scale */
@@ -15169,7 +15169,7 @@
   
   /* coordinates of the image */
   --i:-46; 
-  --j:--1; 
+  --j:-1; 
 }
 .mhf-tnt2 {
   --n:1; /* scale */
@@ -15519,7 +15519,7 @@
   
   /* coordinates of the image */
   --i:-36; 
-  --j:--1; 
+  --j:-1; 
 }
 .mundane-lingering-potion {
   --n:1; /* scale */
@@ -15743,7 +15743,7 @@
   
   /* coordinates of the image */
   --i:-110; 
-  --j:--1; 
+  --j:-1; 
 }
 .nether-brick-block {
   --n:1; /* scale */
@@ -15757,7 +15757,7 @@
   
   /* coordinates of the image */
   --i:-20; 
-  --j:--1; 
+  --j:-1; 
 }
 .nether-brick-fence-be {
   --n:1; /* scale */
@@ -16107,7 +16107,7 @@
   
   /* coordinates of the image */
   --i:-34; 
-  --j:--1; 
+  --j:-1; 
 }
 .netherite-trim-leather-pants {
   --n:1; /* scale */
@@ -16611,7 +16611,7 @@
   
   /* coordinates of the image */
   --i:-91; 
-  --j:--1; 
+  --j:-1; 
 }
 .orange-base-indented-banner {
   --n:1; /* scale */
@@ -16968,7 +16968,7 @@
   
   /* coordinates of the image */
   --i:-92; 
-  --j:--1; 
+  --j:-1; 
 }
 .orange-saltire-banner {
   --n:1; /* scale */
@@ -17038,7 +17038,7 @@
   
   /* coordinates of the image */
   --i:-24; 
-  --j:--1; 
+  --j:-1; 
 }
 .orange-stained-glass-pane-be {
   --n:1; /* scale */
@@ -17304,7 +17304,7 @@
   
   /* coordinates of the image */
   --i:-54; 
-  --j:--1; 
+  --j:-1; 
 }
 .phosphorus {
   --n:1; /* scale */
@@ -17493,7 +17493,7 @@
   
   /* coordinates of the image */
   --i:-51; 
-  --j:--1; 
+  --j:-1; 
 }
 .pink-carpet-revision-1 {
   --n:1; /* scale */
@@ -17696,7 +17696,7 @@
   
   /* coordinates of the image */
   --i:-93; 
-  --j:--1; 
+  --j:-1; 
 }
 .pink-per-bend-sinister-inverted-banner {
   --n:1; /* scale */
@@ -18277,7 +18277,7 @@
   
   /* coordinates of the image */
   --i:-4; 
-  --j:--1; 
+  --j:-1; 
 }
 .potato-revision-2 {
   --n:1; /* scale */
@@ -18396,7 +18396,7 @@
   
   /* coordinates of the image */
   --i:-108; 
-  --j:--1; 
+  --j:-1; 
 }
 .potion-of-night-vision-revision-1 {
   --n:1; /* scale */
@@ -18914,7 +18914,7 @@
   
   /* coordinates of the image */
   --i:-99; 
-  --j:--1; 
+  --j:-1; 
 }
 .purple-fess-banner {
   --n:1; /* scale */
@@ -19005,7 +19005,7 @@
   
   /* coordinates of the image */
   --i:-94; 
-  --j:--1; 
+  --j:-1; 
 }
 .purple-pale-dexter-banner {
   --n:1; /* scale */
@@ -19138,7 +19138,7 @@
   
   /* coordinates of the image */
   --i:-55; 
-  --j:--1; 
+  --j:-1; 
 }
 .purple-sparkler-active {
   --n:1; /* scale */
@@ -19208,7 +19208,7 @@
   
   /* coordinates of the image */
   --i:-8; 
-  --j:--1; 
+  --j:-1; 
 }
 .purple-wool {
   --n:1; /* scale */
@@ -19257,7 +19257,7 @@
   
   /* coordinates of the image */
   --i:-9; 
-  --j:--1; 
+  --j:-1; 
 }
 .quartz-pillar {
   --n:1; /* scale */
@@ -19278,7 +19278,7 @@
   
   /* coordinates of the image */
   --i:-103; 
-  --j:--1; 
+  --j:-1; 
 }
 .quartz-trim-chainmail-boots {
   --n:1; /* scale */
@@ -19432,7 +19432,7 @@
   
   /* coordinates of the image */
   --i:-35; 
-  --j:--1; 
+  --j:-1; 
 }
 .quartz-trim-netherite-helmet {
   --n:1; /* scale */
@@ -19488,7 +19488,7 @@
   
   /* coordinates of the image */
   --i:-58; 
-  --j:--1; 
+  --j:-1; 
 }
 .radon {
   --n:1; /* scale */
@@ -19523,7 +19523,7 @@
   
   /* coordinates of the image */
   --i:-114; 
-  --j:--1; 
+  --j:-1; 
 }
 .raiser-armor-trim {
   --n:1; /* scale */
@@ -19600,7 +19600,7 @@
   
   /* coordinates of the image */
   --i:-17; 
-  --j:--1; 
+  --j:-1; 
 }
 .raw-mutton {
   --n:1; /* scale */
@@ -19887,7 +19887,7 @@
   
   /* coordinates of the image */
   --i:-95; 
-  --j:--1; 
+  --j:-1; 
 }
 .red-field-masoned-banner {
   --n:1; /* scale */
@@ -20258,7 +20258,7 @@
   
   /* coordinates of the image */
   --i:-41; 
-  --j:--1; 
+  --j:-1; 
 }
 .red-tinted-glass-pane {
   --n:1; /* scale */
@@ -20293,7 +20293,7 @@
   
   /* coordinates of the image */
   --i:-48; 
-  --j:--1; 
+  --j:-1; 
 }
 .red-wool-revision-2 {
   --n:1; /* scale */
@@ -20790,7 +20790,7 @@
   
   /* coordinates of the image */
   --i:-1; 
-  --j:--1; 
+  --j:-1; 
 }
 .savanna-village-map {
   --n:1; /* scale */
@@ -20958,14 +20958,14 @@
   
   /* coordinates of the image */
   --i:-38; 
-  --j:--1; 
+  --j:-1; 
 }
 .shaper-armor-trim-smithing-template {
   --n:1; /* scale */
   
   /* coordinates of the image */
   --i:-38; 
-  --j:--1; 
+  --j:-1; 
 }
 .sheaf-pottery-sherd {
   --n:1; /* scale */
@@ -21133,7 +21133,7 @@
   
   /* coordinates of the image */
   --i:-43; 
-  --j:--1; 
+  --j:-1; 
 }
 .skeleton-skull {
   --n:1; /* scale */
@@ -21700,7 +21700,7 @@
   
   /* coordinates of the image */
   --i:-77; 
-  --j:--1; 
+  --j:-1; 
 }
 .spawn-frog {
   --n:1; /* scale */
@@ -21749,7 +21749,7 @@
   
   /* coordinates of the image */
   --i:-36; 
-  --j:--1; 
+  --j:-1; 
 }
 .spawn-husk {
   --n:1; /* scale */
@@ -21931,7 +21931,7 @@
   
   /* coordinates of the image */
   --i:-43; 
-  --j:--1; 
+  --j:-1; 
 }
 .spawn-slime {
   --n:1; /* scale */
@@ -21980,7 +21980,7 @@
   
   /* coordinates of the image */
   --i:-18; 
-  --j:--1; 
+  --j:-1; 
 }
 .spawn-trader-llama {
   --n:1; /* scale */
@@ -22806,7 +22806,7 @@
   
   /* coordinates of the image */
   --i:-112; 
-  --j:--1; 
+  --j:-1; 
 }
 .stone-brick-slab {
   --n:1; /* scale */
@@ -23289,7 +23289,7 @@
   
   /* coordinates of the image */
   --i:-18; 
-  --j:--1; 
+  --j:-1; 
 }
 .tag {
   --n:1; /* scale */
@@ -23541,7 +23541,7 @@
   
   /* coordinates of the image */
   --i:-113; 
-  --j:--1; 
+  --j:-1; 
 }
 .trapped-chest-be {
   --n:1; /* scale */
@@ -23975,7 +23975,7 @@
   
   /* coordinates of the image */
   --i:-7; 
-  --j:--1; 
+  --j:-1; 
 }
 .warped-hanging-sign {
   --n:1; /* scale */
@@ -24017,7 +24017,7 @@
   
   /* coordinates of the image */
   --i:-6; 
-  --j:--1; 
+  --j:-1; 
 }
 .warped-sign {
   --n:1; /* scale */
@@ -24122,7 +24122,7 @@
   
   /* coordinates of the image */
   --i:-3; 
-  --j:--1; 
+  --j:-1; 
 }
 .waxed-block-of-copper {
   --n:1; /* scale */
@@ -24360,7 +24360,7 @@
   
   /* coordinates of the image */
   --i:-5; 
-  --j:--1; 
+  --j:-1; 
 }
 .wet-sponge {
   --n:1; /* scale */
@@ -24528,7 +24528,7 @@
   
   /* coordinates of the image */
   --i:-96; 
-  --j:--1; 
+  --j:-1; 
 }
 .white-chief-dexter-canton-banner {
   --n:1; /* scale */
@@ -24794,7 +24794,7 @@
   
   /* coordinates of the image */
   --i:-79; 
-  --j:--1; 
+  --j:-1; 
 }
 .white-shulker-box {
   --n:1; /* scale */
@@ -25116,7 +25116,7 @@
   
   /* coordinates of the image */
   --i:-97; 
-  --j:--1; 
+  --j:-1; 
 }
 .yellow-beaker {
   --n:1; /* scale */
@@ -25494,7 +25494,7 @@
   
   /* coordinates of the image */
   --i:-98; 
-  --j:--1; 
+  --j:-1; 
 }
 .yellow-snout-banner {
   --n:1; /* scale */
@@ -25599,7 +25599,7 @@
   
   /* coordinates of the image */
   --i:-59; 
-  --j:--1; 
+  --j:-1; 
 }
 .zoglin-spawn-egg {
   --n:1; /* scale */
