adding extractor and some other fixes
fixed the long bugging me issue of the "invalid" image sprite not working, this will be MUCH better!

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -46,7 +46,7 @@
   gap: 1rem;               /* space between input, arrow, output */
 }
 
-.board {
+.crafting-board {
   display: grid;
   gap: var(--slot-gap);
   grid-template-columns: repeat(var(--cols), var(--slot-size));
