fixed large majority of grinder images
fixed all the ores, all that remains are weird ones, experience looks really good imo

--- a/src/css/minecraft.css
+++ b/src/css/minecraft.css
@@ -20897,7 +20897,7 @@
   --i:-52; 
   --j:-19; 
 }
-.sea-lantern-be {
+.sea-lantern {
   --n:1; /* scale */
   
   /* coordinates of the image */
@@ -23795,14 +23795,7 @@
   --i:-58; 
   --j:-26; 
 }
-.verdant-froglight {
-  --n:1; /* scale */
-  
-  /* coordinates of the image */
-  --i:-18; 
-  --j:-7; 
-}
-.verdant-froglight-be {
+.froglight {
   --n:1; /* scale */
   
   /* coordinates of the image */
@@ -24894,7 +24887,7 @@
   --i:-48; 
   --j:-0; 
 }
-.white-wool-revision-2 {
+.wool {
   --n:1; /* scale */
   
   /* coordinates of the image */
